--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,9 +25,11 @@
     /* ── 리뷰 전용 스타일 ── */
     #questionImage { width:100%; height:auto; margin:1rem 0; border:1px solid #ccc; border-radius:4px; }
     #choiceButtons { text-align:center; }
+    /* 선택지 기호 크기 키우기 */
     #choiceButtons button {
       display:inline-block; width:18%; margin:1%; padding:.75rem 0;
-      font-size:1rem; border:1px solid #007bff; border-radius:4px;
+      font-size:1.5rem; /* 이전 1rem 에서 1.5rem 으로 확대 */
+      border:1px solid #007bff; border-radius:4px;
       background:white; color:#007bff; cursor:pointer;
     }
     #submitButton, #skipButton {
@@ -45,6 +47,24 @@
     #explainButton { background:#17a2b8; }
     #nextButton    { background:#28a745; }
     #explanationImage { width:100%; height:auto; margin:1rem 0; border:1px solid #ccc; border-radius:4px; }
+
+    /* ── OX 퀴즈 전용 스타일 ── */
+    #quizSentence { font-size:1rem; margin:1rem 0; }
+    #oxButtons { text-align:center; }
+    #oxButtons button {
+      display:inline-block; width:40%; margin:1%; padding:.75rem 0;
+      font-size:1.5rem; /* O/X 크기 크게 */
+      border:1px solid #007bff; border-radius:4px;
+      background:white; color:#007bff; cursor:pointer;
+    }
+    #quizFeedback { text-align:center; font-size:1.1rem; margin:1rem 0; }
+    #quizOptions button {
+      display:block; width:100%; padding:.75rem; margin:.5rem 0; font-size:1rem;
+      border:none; border-radius:4px; cursor:pointer;
+    }
+    #quizNextSentenceButton { background:#ffc107; color:white; }
+    #quizNextQuestionButton { background:#28a745; color:white; }
+    #quizReviewOriginalButton { background:#17a2b8; color:white; }
   </style>
 </head>
 <body>
@@ -90,8 +110,6 @@
     <!-- ⑤ 틀린 문제 다시 풀기 -->
     <div id="reviewSection" class="hidden">
       <h1>틀린 문제 다시 풀기</h1>
-
-      <!-- 문제 화면 -->
       <div id="reviewQuestionSection">
         <img id="questionImage" class="hidden" alt="문제 이미지">
         <div id="choiceButtons"></div>
@@ -99,8 +117,6 @@
         <button id="skipButton"   class="hidden">SKIP</button>
         <p id="reviewMsg" class="error"></p>
       </div>
-
-      <!-- 피드백 화면 -->
       <div id="reviewFeedbackSection" class="hidden">
         <p id="feedback"></p>
         <img id="explanationImage" class="hidden" alt="해설 이미지">
@@ -109,18 +125,41 @@
         <button id="nextButton"    class="hidden">다음 문제</button>
       </div>
     </div>
+
+    <!-- ⑥ 틀린 문제 O/X 퀴즈 -->
+    <div id="quizSection" class="hidden">
+      <h1>틀린 문제 O/X 퀴즈</h1>
+      <div id="quizContainer">
+        <div id="quizSentenceSection">
+          <p id="quizSentence"></p>
+          <div id="oxButtons">
+            <button id="oxTrueBtn">O</button>
+            <button id="oxFalseBtn">X</button>
+          </div>
+        </div>
+        <div id="quizFeedbackSection" class="hidden">
+          <p id="quizFeedback"></p>
+          <div id="quizOptions">
+            <button id="quizNextSentenceButton">다음 선지</button>
+            <button id="quizNextQuestionButton">다음 문제</button>
+            <button id="quizReviewOriginalButton">원본 문제 풀러 가기</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <script>
     let currentId = '', currentExam = '';
-    let wrongList = [], currentWrongIndex = 0, selectedAnswer = null;
+    let wrongList = [], currentWrongIndex = 0, currentSentenceIndex = 0;
+    let quizSentences = [];
 
     function hideAll() {
-      ['loginSection','examSection','menuSection','reportSection','reviewSection']
+      ['loginSection','examSection','menuSection','reportSection','reviewSection','quizSection']
         .forEach(id => document.getElementById(id).classList.add('hidden'));
     }
     function clearMsgs() {
-      ['loginMsg','examMsg','menuMsg','reviewMsg','feedback']
+      ['loginMsg','examMsg','menuMsg','reviewMsg','feedback','quizFeedback']
         .forEach(id => {
           const el = document.getElementById(id);
           if (el) el.textContent = '';
@@ -134,178 +173,191 @@
         });
       const cb = document.getElementById('choiceButtons');
       if (cb) cb.innerHTML = '';
-      selectedAnswer = null;
     }
 
-    // 1) 로그인
+    // 로그인
     document.getElementById('loginBtn').onclick = () => {
-      clearMsgs();
-      resetReviewUI();
+      clearMsgs(); resetReviewUI();
       const id = document.getElementById('loginId').value.trim();
-      if (!id) {
-        document.getElementById('loginMsg').textContent = 'ID를 입력하세요';
-        return;
-      }
+      if (!id) { document.getElementById('loginMsg').textContent='ID를 입력하세요'; return; }
       fetch(`/api/authenticate?id=${encodeURIComponent(id)}`)
-        .then(r => r.json()).then(d => {
+        .then(r=>r.json()).then(d=>{
           if (d.authenticated) {
-            currentId = id;
-            hideAll();
+            currentId = id; hideAll();
             document.getElementById('examSection').classList.remove('hidden');
             fetch('/api/exams').then(r=>r.json()).then(exs=>{
-              const sel = document.getElementById('examSelect');
-              sel.innerHTML = '';
-              exs.forEach(e => sel.add(new Option(e,e)));
+              const sel=document.getElementById('examSelect');
+              sel.innerHTML=''; exs.forEach(e=>sel.add(new Option(e,e)));
             });
           } else {
-            document.getElementById('loginMsg').textContent = '인증되지 않은 ID입니다';
+            document.getElementById('loginMsg').textContent='인증되지 않은 ID입니다';
           }
-        })
-        .catch(() => {
-          document.getElementById('loginMsg').textContent = '인증 오류';
-        });
+        }).catch(()=>document.getElementById('loginMsg').textContent='인증 오류');
     };
 
-    // 2) 회차 선택
+    // 회차 선택
     document.getElementById('examBtn').onclick = () => {
-      clearMsgs();
-      resetReviewUI();
+      clearMsgs(); resetReviewUI();
       const ex = document.getElementById('examSelect').value;
-      if (!ex) {
-        document.getElementById('examMsg').textContent = '회차 선택';
-        return;
-      }
-      currentExam = ex;
-      hideAll();
+      if (!ex) { document.getElementById('examMsg').textContent='회차 선택'; return; }
+      currentExam=ex; hideAll();
       document.getElementById('menuSection').classList.remove('hidden');
       document.getElementById('homeButton').classList.remove('hidden');
     };
 
-    // 3) 내 성적표
+    // 내 성적표
     document.getElementById('menuReport').onclick = () => {
-      hideAll();
-      clearMsgs();
-      resetReviewUI();
+      hideAll(); clearMsgs(); resetReviewUI();
       document.getElementById('reportSection').classList.remove('hidden');
       fetch(`/api/reportcard?exam=${encodeURIComponent(currentExam)}&id=${encodeURIComponent(currentId)}`)
-        .then(r => r.json()).then(d => {
-          if (d.url) document.getElementById('reportImage').src = d.url;
-          else       document.getElementById('reportMsg').textContent = d.error;
-        })
-        .catch(() => {
-          document.getElementById('reportMsg').textContent = '로드 오류';
-        });
+        .then(r=>r.json()).then(d=>{
+          if (d.url) document.getElementById('reportImage').src=d.url;
+          else       document.getElementById('reportMsg').textContent=d.error;
+        }).catch(()=>document.getElementById('reportMsg').textContent='로드 오류');
     };
 
-    // 4) 틀린 문제 다시 풀기
+    // 틀린 문제 다시 풀기
     document.getElementById('menuReview').onclick = () => {
-      hideAll();
-      clearMsgs();
-      resetReviewUI();
+      hideAll(); clearMsgs(); resetReviewUI();
       document.getElementById('reviewSection').classList.remove('hidden');
       fetch(`/api/review?exam=${encodeURIComponent(currentExam)}&id=${encodeURIComponent(currentId)}`)
-        .then(r => r.json()).then(d => {
-          wrongList = d.wrongList.map(x => x.question);
+        .then(r=>r.json()).then(d=>{
+          wrongList = d.wrongList.map(x=>x.question);
           currentWrongIndex = 0;
           loadQuestion(wrongList[0]);
-        })
-        .catch(() => {
-          document.getElementById('reviewMsg').textContent = '불러오기 오류';
-        });
+        }).catch(()=>document.getElementById('reviewMsg').textContent='불러오기 오류');
     };
 
+    // OX 퀴즈 시작
+    document.getElementById('menuQuiz').onclick = () => {
+      hideAll(); clearMsgs(); resetReviewUI();
+      document.getElementById('quizSection').classList.remove('hidden');
+      // 틀린 문제 목록 가져오기
+      fetch(`/api/review?exam=${encodeURIComponent(currentExam)}&id=${encodeURIComponent(currentId)}`)
+        .then(r=>r.json()).then(d=>{
+          wrongList = d.wrongList.map(x=>x.question);
+          currentWrongIndex = 0;
+          currentSentenceIndex = 0;
+          loadQuizSentences(wrongList[0]);
+        }).catch(()=>alert('OX 퀴즈 로드 오류'));
+    };
+
+    // --- 리뷰 함수들 ---
     function loadQuestion(qno) {
-      clearMsgs();
-      resetReviewUI();
-      // 문제 이미지 표시
+      clearMsgs(); resetReviewUI();
       const qi = document.getElementById('questionImage');
       qi.src = `/problem_images/${encodeURIComponent(currentExam)}/${qno}.png`;
       qi.classList.remove('hidden');
-      // 선택지 (①②③④⑤)
       const cb = document.getElementById('choiceButtons');
-      const symbols = ['①','②','③','④','⑤'];
-      symbols.forEach((label, idx) => {
+      ['①','②','③','④','⑤'].forEach((label, idx) => {
         const btn = document.createElement('button');
         btn.textContent = label;
-        btn.onclick = () => {
-          selectedAnswer = idx + 1;
-          cb.querySelectorAll('button').forEach(b => b.style.background = 'white');
-          btn.style.background = '#d0e6ff';
+        btn.onclick = ()=>{
+          selectedAnswer = idx+1;
+          cb.querySelectorAll('button').forEach(b=>b.style.background='white');
+          btn.style.background='#d0e6ff';
         };
         cb.appendChild(btn);
       });
-      // 제출/스킵 버튼
-      const sb = document.getElementById('submitButton');
-      sb.classList.remove('hidden');
-      sb.onclick = () => submitAnswer(qno);
-      const skip = document.getElementById('skipButton');
-      skip.classList.remove('hidden');
-      skip.onclick = () => nextQuestion();
+      document.getElementById('submitButton').classList.remove('hidden');
+      document.getElementById('submitButton').onclick = ()=>submitAnswer(qno);
+      document.getElementById('skipButton').classList.remove('hidden');
+      document.getElementById('skipButton').onclick = ()=>nextQuestion();
     }
-
     function submitAnswer(qno) {
-      if (selectedAnswer === null) {
-        document.getElementById('reviewMsg').textContent = '선지를 선택하세요';
-        return;
+      if (typeof selectedAnswer !== 'number') {
+        document.getElementById('reviewMsg').textContent='선지를 선택하세요'; return;
       }
       clearMsgs();
       fetch(`/api/submit_review?exam=${encodeURIComponent(currentExam)}&question=${qno}&answer=${selectedAnswer}`)
-        .then(r => r.json()).then(d => {
+        .then(r=>r.json()).then(d=>{
           document.getElementById('reviewQuestionSection').classList.add('hidden');
           const fb = document.getElementById('feedback');
-          fb.textContent = d.correct ? '정답입니다!' : '오답입니다.';
-          fb.style.color = d.correct ? '#007bff' : '#dc3545';
+          fb.textContent = d.correct?'정답입니다!':'오답입니다.';
+          fb.style.color = d.correct?'#007bff':'#dc3545';
           document.getElementById('reviewFeedbackSection').classList.remove('hidden');
           const retry = document.getElementById('retryButton');
-          if (retry) {
-            retry.classList.remove('hidden');
-            retry.onclick = () => {
-              document.getElementById('reviewFeedbackSection').classList.add('hidden');
-              document.getElementById('reviewQuestionSection').classList.remove('hidden');
-              loadQuestion(qno);
-            };
-          }
+          retry.classList.remove('hidden');
+          retry.onclick = ()=>{ document.getElementById('reviewFeedbackSection').classList.add('hidden'); document.getElementById('reviewQuestionSection').classList.remove('hidden'); loadQuestion(qno); };
           const expb = document.getElementById('explainButton');
-          if (expb) {
-            expb.classList.remove('hidden');
-            expb.onclick = () => {
-              const ei = document.getElementById('explanationImage');
-              if (ei) {
-                ei.src = `/exp_images/${encodeURIComponent(currentExam)}/${qno}.png`;
-                ei.classList.remove('hidden');
-              }
-            };
-          }
+          expb.classList.remove('hidden');
+          expb.onclick = ()=>{
+            const ei = document.getElementById('explanationImage');
+            ei.src = `/exp_images/${encodeURIComponent(currentExam)}/${qno}.png`;
+            ei.classList.remove('hidden');
+          };
           const next = document.getElementById('nextButton');
-          if (next) {
-            next.classList.remove('hidden');
-            next.onclick = () => nextQuestion();
-          }
-        })
-        .catch(() => {
-          document.getElementById('feedback').textContent = '오류';
-        });
+          next.classList.remove('hidden');
+          next.onclick = ()=>nextQuestion();
+        }).catch(()=>document.getElementById('feedback').textContent='오류');
     }
-
-    function nextQuestion() {
+    function nextQuestion(){
       currentWrongIndex++;
       document.getElementById('reviewFeedbackSection').classList.add('hidden');
       document.getElementById('reviewQuestionSection').classList.remove('hidden');
-      if (currentWrongIndex < wrongList.length) {
-        loadQuestion(wrongList[currentWrongIndex]);
-      } else {
-        location.reload();
-      }
+      if(currentWrongIndex<wrongList.length) loadQuestion(wrongList[currentWrongIndex]);
+      else location.reload();
     }
 
-    // 5) OX 퀴즈 (준비 중)
-    document.getElementById('menuQuiz').onclick = () => {};
+    // --- OX 퀴즈 함수들 ---
+    function loadQuizSentences(qno){
+      // 문장 + 정답 O/X 배열 불러오기
+      fetch(`/api/quiz_sentences?exam=${encodeURIComponent(currentExam)}&id=${encodeURIComponent(currentId)}&question=${qno}`)
+        .then(r=>r.json()).then(d=>{
+          quizSentences = d.sentences;  // [{ text, correct }, ...]
+          currentSentenceIndex = 0;
+          showQuizSentence();
+        });
+    }
+    function showQuizSentence(){
+      clearMsgs(); resetReviewUI();
+      const q = quizSentences[currentSentenceIndex];
+      document.getElementById('quizSentence').textContent = q.text;
+      document.getElementById('quizSentenceSection').classList.remove('hidden');
+      document.getElementById('oxTrueBtn').onclick = ()=>handleQuizAnswer(true);
+      document.getElementById('oxFalseBtn').onclick = ()=>handleQuizAnswer(false);
+    }
+    function handleQuizAnswer(answerBool){
+      const correctBool = quizSentences[currentSentenceIndex].correct;
+      const fb = document.getElementById('quizFeedback');
+      fb.textContent = answerBool===correctBool? '정답입니다!' : '오답입니다.';
+      fb.style.color = answerBool===correctBool? '#007bff':'#dc3545';
+      document.getElementById('quizSentenceSection').classList.add('hidden');
+      document.getElementById('quizFeedbackSection').classList.remove('hidden');
+      // 옵션 표시
+      // 다음 선지
+      const nextSentB = document.getElementById('quizNextSentenceButton');
+      if(currentSentenceIndex < quizSentences.length-1){
+        nextSentB.classList.remove('hidden');
+        nextSentB.onclick = ()=>{
+          currentSentenceIndex++;
+          showQuizSentence();
+        };
+      } else {
+        nextSentB.classList.add('hidden');
+      }
+      // 다음 문제
+      document.getElementById('quizNextQuestionButton').classList.remove('hidden');
+      document.getElementById('quizNextQuestionButton').onclick = ()=>{
+        currentWrongIndex++;
+        if(currentWrongIndex < wrongList.length){
+          loadQuizSentences(wrongList[currentWrongIndex]);
+        } else {
+          location.reload();
+        }
+      };
+      // 원본 문제 풀러 가기
+      document.getElementById('quizReviewOriginalButton').classList.remove('hidden');
+      document.getElementById('quizReviewOriginalButton').onclick = ()=>{
+        hideAll(); clearMsgs(); resetReviewUI();
+        document.getElementById('reviewSection').classList.remove('hidden');
+        loadQuestion(wrongList[currentWrongIndex]);
+      };
+    }
 
     // 홈 버튼
-    document.getElementById('homeButton').onclick = () => {
-      hideAll();
-      clearMsgs();
-      resetReviewUI();
+    document.getElementById('homeButton').onclick = ()=>{
+      hideAll(); clearMsgs(); resetReviewUI();
       document.getElementById('menuSection').classList.remove('hidden');
       document.getElementById('homeButton').classList.remove('hidden');
     };
